<resources>
    <string name="app_name">Saivo</string>
    <!-- Strings related to userLoggedIn -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="loading_text">Loading…</string>
    <string name="register_btnText">Register</string>
    <string name="login_login_btnText">Login</string>
    <string name="login_forgot_btnText">Forgot Password?</string>
    <string name="username_editText">\@j.pearson</string>
    <string name="lastname_editText">Pearson</string>
    <string name="firstname_editText">John</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="user_name">User Name</string>
    <string name="new_password">New Password</string>
    <string name="profile_image">Profile Image</string>
    <string name="enter_account_number_email">Enter Your Email &amp; Number</string>

    <string name="email_error">Email Error</string>
    <string name="password_error">Password Error</string>
    <string name="lastname_error">Lastname Error</string>
    <string name="firstname_error">Firstname Error</string>

    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="mapview_text">MapView</string>
    <string name="settings_text">Settings</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="preferences_text">Preferences</string>
    <string name="notifications_text">Notifications</string>
    <string name="saivo_logo_map_marker">Saivo Logo Map Marker</string>

    <string name="account">Account</string>
    <string name="location">Location</string>
    <string name="preferences">Preferences</string>
    <string name="all_settings">All Settings</string>
    <string name="email_example">fullname@example.com</string>
    <string name="navigation_drawer_open">Open Side Navigation</string>
    <string name="navigation_drawer_close">Close Side Navigation</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendation_image">Recommendation Image</string>
    <string name="notification_image">Notification Image</string>
    <string name="add">Add Preference</string>
    <string name="enter_preferences">enterPreferences</string>
    <string name="remove">Remove Preference</string>
    <string name="search">Search</string>
    <string name="preference_icon">Preference Icon</string>
    <string name="description">Description:</string>
    <string name="category">Category:</string>
    <string name="preference">Preferences:</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="phone_number">Phone Number</string>
    <string name="like_dislike">What you Like,And Dislike</string>
    <string name="new_activities">New Activities</string>
    <string name="completed_activities">Completed activities</string>
    <string name="close_alert">Close Alert</string>
    <string name="alert_image">Alert Image</string>
    <string name="turn_on_location">This app needs GPS Turned On</string>
    <string name="enable_location">Please Enable GPS</string>
    <string name="what_you_like">What you Like</string>
    <string name="and_dislike">And Dislike</string>
    <string name="welcome_verify">Welcome to Saivo</string>
    <string name="verify_account_text">Verify Account</string>
    <string name="update_your_email_and_phone_number">Update your email and phone number</string>
</resources>
