<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlueGray"
        android:orientation="vertical">

    <include
            android:id="@+id/preference_dialog_item"
            layout="@layout/preference_card" />

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="8dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

            <TextView
                    android:id="@+id/preference_dialog_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:labelFor="@id/category_auto_complete_textview"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/category" />

            <MultiAutoCompleteTextView
                    android:id="@+id/category_auto_complete_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="13"
                    android:maxLines="1" />

            <TextView

                    android:id="@+id/preference_dialog_preference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/preference" />

            <AutoCompleteTextView
                    android:id="@+id/preference_auto_complete_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/like_dislike"
                    android:lines="1"
                    android:maxLength="35"
                    android:maxLines="1" />

            <TextView

                    android:id="@+id/preference_description_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:labelFor="@id/preference_description_editText"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/description" />

            <EditText
                    android:id="@+id/preference_description_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:maxLength="150"
                    android:maxLines="5"
                    tools:targetApi="o" />

            <Button
                    android:id="@+id/preference_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:text="@string/save" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>