<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.auth.RegisterFragment"
    >
        <EditText
                app:layout_constraintVertical_bias="0.25"
                android:id="@+id/register_firstname_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/firstname"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/register_lastname_editText"
                app:layout_constraintLeft_toLeftOf="parent"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_chainStyle="packed"
                android:autofillHints="false" tools:targetApi="o"
        />
        <EditText
                android:id="@+id/register_lastname_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lastname"
                app:layout_constraintTop_toBottomOf="@+id/register_firstname_editText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/register_email_editText"
                app:layout_constraintLeft_toLeftOf="parent"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:autofillHints="false" tools:targetApi="o"
        />
        <EditText
                android:id="@+id/register_email_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@+id/register_lastname_editText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/register_password_editText"
                app:layout_constraintLeft_toLeftOf="parent"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="false" tools:targetApi="o"
        />
        <EditText
                android:id="@+id/register_password_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/register_email_editText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/register_register_button"
                app:layout_constraintLeft_toLeftOf="parent"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" tools:ignore="Autofill"/>
        <Button
                android:text="@string/register"
                android:id="@+id/register_register_button"
                app:layout_constraintTop_toBottomOf="@+id/register_password_editText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>