<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.pages.AccountFragment">

  <LinearLayout
      android:id="@+id/accountDetails"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/editDetails"
      >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlueGray"
        android:padding="20dp">

      <ImageView
          android:id="@+id/account_profile_image"
          android:layout_width="120dp"
          android:layout_height="120dp"
          android:clickable="true"
          android:contentDescription="@string/profile_image"
          android:focusable="true"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@id/account_fullname"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/avatar" />

      <TextView
          android:id="@+id/account_fullname"
          android:layout_width="wrap_content"
          android:layout_height="20sp"
          android:layout_margin="16dp"
          app:layout_constraintBottom_toTopOf="@id/email_text_view"
          app:layout_constraintStart_toEndOf="@id/account_profile_image"
          app:layout_constraintTop_toTopOf="@+id/account_profile_image"
          tools:text="Fullname" />

      <TextView
          android:id="@+id/account_phone_number"
          android:layout_width="wrap_content"
          android:layout_height="20sp"
          app:layout_constraintBottom_toTopOf="@id/email_text_view"
          app:layout_constraintStart_toStartOf="@+id/account_fullname"
          app:layout_constraintTop_toBottomOf="@id/account_fullname"
          tools:text="+27 (081)-908-8287" />

      <TextView
          android:id="@+id/email_text_view"
          android:layout_width="wrap_content"
          android:layout_height="20sp"
          app:layout_constraintBottom_toBottomOf="@+id/account_profile_image"
          app:layout_constraintStart_toStartOf="@id/account_phone_number"
          app:layout_constraintTop_toBottomOf="@id/account_fullname"
          tools:text="@string/email_example" />


    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/editDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountDetails">


      <androidx.constraintlayout.widget.ConstraintLayout

          android:layout_width="match_parent"
          android:layout_height="wrap_content">


        <TextView
            android:id="@+id/reset_password_hints"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:text="@string/update_your_email_and_phone_number"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/reset_email_editText"
            app:layout_constraintLeft_toLeftOf="@+id/GuidelineLeft"
            app:layout_constraintRight_toRightOf="@+id/GuidelineRight"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reset_email_editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="false"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/reset_phone_number_editText"
            app:layout_constraintLeft_toLeftOf="@+id/GuidelineLeft"
            app:layout_constraintRight_toRightOf="@+id/GuidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_hints"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/reset_phone_number_editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="false"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_local_phone"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/reset_password_editText"
            app:layout_constraintLeft_toLeftOf="@+id/GuidelineLeft"
            app:layout_constraintRight_toRightOf="@+id/GuidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/reset_email_editText"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/reset_password_editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="false"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/reset_confirm_button"
            app:layout_constraintLeft_toLeftOf="@+id/GuidelineLeft"
            app:layout_constraintRight_toRightOf="@+id/GuidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/reset_phone_number_editText"
            tools:targetApi="o" />

        <Button
            android:id="@+id/reset_confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:ems="10"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/GuidelineLeft"
            app:layout_constraintRight_toRightOf="@+id/GuidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_editText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/GuidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="50dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/GuidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="50dp" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>