<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.auth.LoginFragment"
                                                   android:id="@+id/login_frameLayout">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/register_email_editText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="237dp" android:autofillHints="Email" tools:ignore="LabelFor" tools:targetApi="o"
            android:drawableStart="@drawable/ic_email_black"
            android:drawableLeft="@drawable/ic_email_black"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_password_editText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/register_email_editText"
            app:layout_constraintBottom_toTopOf="@+id/register_register_button" android:autofillHints="Password"
            tools:ignore="LabelFor"
            tools:targetApi="o"
            android:drawableStart="@drawable/ic_lock_black"
            android:drawableLeft="@drawable/ic_lock_black"/>
    <Button
            android:text="@string/register_btnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/register_register_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
            android:layout_marginStart="99dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="341dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="342dp"/>
    <Button
            android:text="@string/login_login_btnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_login_button"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_register_button"
            android:layout_marginTop="341dp"
            app:layout_constraintBottom_toBottomOf="@+id/register_register_button"
            android:layout_marginBottom="342dp"/>
    <Button
            android:text="@string/login_forgot_btnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login_forgot_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_register_button"
            app:layout_constraintVertical_bias="0.078"/>
</androidx.constraintlayout.widget.ConstraintLayout>